kubernetes/apps/servarr/qbittorrent/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app qbittorrent
  labels:
    app.kubernetes.io/name: *app
spec:
  ports:
    - name: *app
      port: 8080
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: *app
